# tileserver-rs

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PUBLISHING.md  README.md  TODO.md  compose.override.yml  compose.prod.yml  compose.yml  config.benchmark.toml  config.example.toml  config.offline.toml  docker-entrypoint.sh  lint-staged.config.cjs  lint-staged.config.mjs  package-lock.json  package.json  release-notes.md  release-please-config.json
.github/: ARCHITECTURE.md  dependabot.yml
.github/workflows/: ci-node.yml  ci-rust.yml  dependabot-bun-lock.yml  deploy-docs.yml  deploy-marketing.yml  docker.yml  pipeline.yml  release-docker.yml  release-homebrew.yml  release-linux-amd64.yml  release-linux-arm64.yml  release-macos-amd64.yml  release-macos-arm64.yml  release-please.yml
apps/client/: eslint.config.js  nuxt.config.ts  package.json  prettier.config.js  tailwind.config.ts
apps/client/app/: app.vue
apps/client/app/assets/css/: tailwind.css
apps/client/app/components/ui/badge/: Badge.vue  index.ts
apps/client/app/components/ui/button/: index.ts
apps/client/app/components/ui/card/: Card.vue  CardDescription.vue  CardFooter.vue  CardHeader.vue
apps/client/app/components/ui/collapsible/: Collapsible.vue  CollapsibleContent.vue  CollapsibleTrigger.vue
apps/client/app/components/ui/input/: Input.vue
apps/client/app/composables/: use-data-inspector.ts  use-map-style.ts  use-style-viewer.ts  use-tileserver-data.ts
apps/client/app/pages/: index.vue
apps/client/app/pages/data/: [data].vue
apps/client/app/pages/styles/: [style].vue
apps/client/app/plugins/: 1.vue-query.ts  2.tanstack-db.client.ts
apps/client/app/types/: data.ts  index.ts  map.ts  style.ts
apps/client/app/utils/api/data/: queries.ts
apps/client/app/utils/api/styles/: queries.ts
apps/client/app/utils/collection-keys/: data.ts  index.ts  styles.ts
apps/client/app/utils/collections/: index.ts  use-data-sources.collection.ts  use-map-styles.collection.ts
apps/client/app/utils/query-keys/: data.ts  index.ts  styles.ts
apps/client/public/: wmts.xml
apps/client/shared/collections/: query-client.ts
apps/docs/: nuxt.config.ts  package.json  wrangler.json
apps/docs/content/: index.md
apps/docs/content/1.getting-started/: 1.installation.md  2.configuration.md  2.quickstart.md  3.configuration.md
apps/docs/content/4.guides/: 1.static-images.md  3.docker.md  4.postgres-outdb-rasters.md  5.telemetry.md
apps/docs/content/5.integrations/: 1.maplibre.md
apps/marketing/: .oxlintrc.jsonc  components.json  eslint.config.js  nuxt.config.ts  package.json  wrangler.json
apps/marketing/app/: app.vue
apps/marketing/app/assets/css/: tailwind.css
apps/marketing/app/components/ui/badge/: index.ts
apps/marketing/app/components/ui/button/: Button.vue  index.ts
apps/marketing/app/components/ui/card/: Card.vue  CardContent.vue  CardFooter.vue  CardHeader.vue  CardTitle.vue
apps/marketing/app/components/ui/navigation-menu/: NavigationMenu.vue  NavigationMenuContent.vue  NavigationMenuIndicator.vue  NavigationMenuItem.vue  NavigationMenuList.vue  NavigationMenuViewport.vue
apps/marketing/app/components/ui/separator/: Separator.vue
apps/marketing/app/components/ui/tooltip/: Tooltip.vue  TooltipContent.vue  TooltipProvider.vue  TooltipTrigger.vue
apps/marketing/app/pages/: index.vue
benchmarks/: config.docker.toml  config.local.toml  docker-compose.yml  package.json  run-benchmarks.js  tileserver-gl-config.json
benchmarks/postgres/: init.sql
client/: app.vue  lint-staged.config.cjs  nuxt.config.ts  package-lock.json  package.json  windi.config.ts
client/assets/css/: global.css
client/composables/: useDataSource.ts  useDataSources.ts  useMapStyle.ts  useMapStyles.ts
client/config/: head.ts  index.ts
client/config/modules/: index.ts  windicss.ts
client/pages/: index.vue
client/pages/data/: [data].vue
client/pages/styles/: [style].vue
client/types/: data.ts  index.ts  style.ts
compose/: tileserver.yml
data/raster/: test-dem.cog.tif  test-rgb.cog.tif
data/styles/protomaps-light/: style.json
docs/: app.config.ts  eslint.config.js  nuxt.config.ts  package.json
docs/content/: index.md
docs/content/1.getting-started/: 1.installation.md  2.configuration.md  3.configuration.md
docs/content/2.benchmarks/: 1.performance.md
docs/content/3.api/: 1.endpoints.md
docs/content/4.guides/: 2.vector-tiles.md  4.postgres-outdb-rasters.md
docs/content/6.development/: 1.testing.md
homebrew/Formula/: tileserver-rs.rb
maplibre-native-sys/: Cargo.toml  build.rs
maplibre-native-sys/cpp/: maplibre_c.cpp
maplibre-native-sys/src/: lib.rs
marketing/: eslint.config.js  nuxt.config.ts  package.json
marketing/app/: app.vue
marketing/app/assets/css/: tailwind.css
marketing/app/components/ui/badge/: Badge.vue
marketing/app/components/ui/navigation-menu/: NavigationMenuContent.vue  NavigationMenuLink.vue  NavigationMenuList.vue  NavigationMenuTrigger.vue  NavigationMenuViewport.vue  index.ts
marketing/app/components/ui/tooltip/: Tooltip.vue  TooltipContent.vue  TooltipTrigger.vue
marketing/app/pages/: index.vue
server/: Cargo.toml  rustfmt.toml
server/src/: main.rs
server/src/drivers/: mbtiles.rs  pmtiles.rs
server/src/structs/: config.rs  mod.rs
src/: cache_control.rs  cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  openapi.rs  telemetry.rs  wmts.rs
src/drivers/: mod.rs
src/render/: mod.rs  native.rs  overlay.rs  pool.rs  renderer.rs  types.rs
src/routes/: routes.rs
src/sources/: cog.rs  manager.rs  mbtiles.rs  mod.rs  pmtiles.rs
src/sources/pmtiles/: http.rs  local.rs
src/sources/postgres/: cache.rs  mod.rs  outdb.rs  pool.rs  source.rs  table.rs
src/structs/: config.rs  data.rs  mod.rs  style.rs
src/styles/: mod.rs
tests/: api_endpoints.rs  config.test.toml  e2e_rendering.rs  integration.rs  postgres_sources.rs  raster_sources.rs
