[package]
name = "tileserver-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Vinayak Kulkarni <inbox.vinayak@gmail.com>"]
description = "Tileserver for serving vector maps from data source(s)"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/vinayakkulkarni/tileserver-rs"
keywords = ["pmtiles", "mbtiles", "gis", "vector-tiles", "tileserver"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
rust-embed = { version = "8", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.42", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "compression-br", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tile format support - commented out until API integration is complete
# mbtiles = { version = "0.13", default-features = false }
# pmtiles = { version = "0.11", features = ["mmap-async-tokio"] }
# sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Optional S3 support
# aws-config = { version = "1.5", optional = true }
# aws-sdk-s3 = { version = "1.65", optional = true }

[features]
default = []
http = ["reqwest"]
# s3 = ["aws-config", "aws-sdk-s3"]
# full = ["http", "s3"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
