[package]
name = "tileserver-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Vinayak Kulkarni <inbox.vinayak@gmail.com>"]
description = "Tileserver for serving vector maps from data source(s)"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/vinayakkulkarni/tileserver-rs"
keywords = ["pmtiles", "mbtiles", "gis", "vector-tiles", "tileserver"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.8"
bytes = "1.11"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15.7"
mime_guess = "2.0.5"
pmtiles = { version = "0.18.2", default-features = false, features = ["http-async", "tilejson"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
rust-embed = { version = "8.9", features = ["axum"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = { version = "1.48", features = ["full"] }
toml = "0.8.23"
tower-http = { version = "0.6.8", features = ["fs", "cors", "compression-gzip", "compression-br", "trace", "set-header"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Optional MBTiles support (requires SQLite)
# mbtiles = { version = "0.13", default-features = false }
# sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Optional S3 support
# aws-config = { version = "1.5", optional = true }
# aws-sdk-s3 = { version = "1.65", optional = true }

[features]
default = []
# s3 = ["aws-config", "aws-sdk-s3"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
